feat: improve client utilities and previews